[package]
name = "chatgpt-private-test"
version = "0.2.1"
edition = "2021"
description = "helper functions to use chatgpt"
authors = ["jaykchen@gmail.com"]
license = "MIT"


[[example]]
name = "simple"
path = "src/example/simple.rs"


[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
http_req = "0.9.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
tokio = { version = "1.25.1", features = ["full"] }
async-openai = "0.12.0"
tiktoken-rs = "0.4.4"
qdrant-client = { version = "1.3.0", features = ["reqwest", "serde"] }
rand = "0.8.5"
